--- a/x11-keysymdef/Cargo.toml
+++ b/x11-keysymdef/Cargo.toml
@@ -14,3 +14,9 @@ lazy_static = "1.3.0"
 [build-dependencies]
 serde_json = "1.0.40"
 serde = { version = "1.0.97", features = ["derive"] }
+
+[features]
+default = ["by_name", "by_codepoint", "by_keysym" ]
+by_name = []
+by_codepoint = []
+by_keysym = []
